--- a/src/js/index.html
+++ b/src/js/index.html
@@ -115,6 +115,12 @@
       editor = new EditorView({
         doc: `# ✨ Welcome to liquidsoap's online interpreter! ✨
 # 🤖 Language version: ${version}
+#
+# ⚠️  This interpreter only supports a small subset of the language ⚠️
+#
+# For a most complete exploration of all the operators, we recommend
+# using the interactive mode using the `liquidsoap --interactive` CLI.
+#
 #  Write your code here:
 
 `,
