--- a/src/js/index.html
+++ b/src/js/index.html
@@ -119,7 +119,7 @@
 # ⚠️  This interpreter only supports a small subset of the language ⚠️
 #
 # For a most complete exploration of all the operators, we recommend
-# using the interactive mode using the `liquidsoap --interactive` CLI.
+# using the interactive mode using the liquidsoap CLI.
 #
 #  Write your code here:
 
