--- a/src/js/index.html
+++ b/src/js/index.html
@@ -14,7 +14,7 @@
     }
   </style>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script type="module" src="https://esm.sh/liquidsoap-playground@1.1.1"></script>
+  <script type="module" src="./playground.bundle.js"></script>
   <script src="interactive_js.bc.js"></script>
 </head>
 
